--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,6 +14,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
+
+    <script>
+      window.__CSRF_TOKEN__ = "__REPLACE_WITH_CSRF_TOKEN__";
+    </script>
+    
     <title>Abricate</title>
   </head>
   <body>
